--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <div class="row" id="songs">
             <div class="col-md-12" id="song-list">
                 <ul>
-                    <li><a href="./assets/Omi - Hula Hoop (Official Video).mp3">Hula Hoop - Irene Eldho</a></li>
+                    <li><a href="./assets/Omi - Hula Hoop (Cut Intro and End).mp3">Hula Hoop - Irene Eldho</a></li>
                     <li><a href="./assets/Bob Marley Three little birds karaoke.mp3">3 Little Birds - Alaina Berkowitz</a></li>
-                    <li><a href="./assets/Backstage- Episode 30 Clip - Denzel's Music Video.mp3">Backstage: Music Video - Reya Sinha and Anika Bijala</a></li>
+                    <li><a href="./assets/Backstage-Denzel's Music Video (Cut Intro).mp3">Backstage: Music Video - Reya Sinha and Anika Bijala</a></li>
                     <li><a href="./assets/Sia - Cheap Thrills (Karaoke Version).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
                     <li><a href="./assets/That's What I Like Clean Version.mp3">That's What I Like - Tegan Heim and Abigail Lavenberg</a></li>
                     <li><a href="./assets/Karaoke Piece By Piece - Kelly Clarkson - cut for Giada Amoia at 1-23.mp3">Piece By Piece, Giada Amoia</a></li>
