sia version was off

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <li><a href="./assets/Omi - Hula Hoop (Cut Intro and End).mp3">Hula Hoop - Irene Eldho</a></li>
                     <li><a href="./assets/Bob Marley Three little birds karaoke.mp3">3 Little Birds - Alaina Berkowitz</a></li>
                     <li><a href="./assets/Backstage-Denzel's Music Video (Cut Intro).mp3">Backstage: Music Video - Reya Sinha and Anika Bijala</a></li>
-                    <li><a href="./assets/Sia - Cheap Thrills (Karaoke Version).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
+                    <li><a href="./assets/Sia - Cheap Thrills (Karaoke Cut Intro).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
                     <li><a href="./assets/That's What I Like Clean Version.mp3">That's What I Like - Tegan Heim and Abigail Lavenberg</a></li>
                     <li><a href="./assets/Karaoke Piece By Piece - Kelly Clarkson - cut for Giada Amoia at 1-23.mp3">Piece By Piece, Giada Amoia</a></li>
                     <li><a href="./assets/The Little Mermaid - Part Of Your World (Karaoke Version).mp3">Part Of Your World - Alyssa Longobardi</a></li>
