conversions and medleys

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
         <div class="row" id="songs">
             <div class="col-md-12" id="song-list">
                 <ul>
-                    <li><a href="./assets/Alessia Cara - Scars To Your Beautiful Karaoke Lyrics.mp3">Mariella Trogani and the 3rd Grade Glee Club</a></li>
-                    <li><a href="./assets/Omi - Hula Hoop (Cut Intro and End).mp3">Hula Hoop - Irene Eldho</a></li>
-                    <li><a href="./assets/Bob Marley Three little birds karaoke.mp3">3 Little Birds - Alaina Berkowitz</a></li>
-                    <li><a href="./assets/Ding Dong.m4a">Ding Dong(Munchkinland) - Melzer, Schwartz, et al</a></li>
-                    <li><a href="./assets/Possible.m4a">It's Possible - Melzer, Schwartz, et al</a></li>
-                    <li><a href="./assets/Backstage-Denzel's Music Video (Cut Intro).mp3">Backstage: Music Video - Reya Sinha and Anika Bijala</a></li>
-                    <li><a href="./assets/Sia - Cheap Thrills (Karaoke Cut Intro).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
-                    <li><a href="./assets/That's What I Like Clean Version.mp3">That's What I Like - Tegan Heim and Abigail Lavenberg</a></li>
-                    <li><a href="./assets/Karaoke Piece By Piece - Kelly Clarkson - cut for Giada Amoia at 1-23.mp3">Piece By Piece, Giada Amoia</a></li>
-                    <li><a href="./assets/The Little Mermaid - Part Of Your World (Karaoke Version).mp3">Part Of Your World - Alyssa Longobardi</a></li>
-                    <li><a href="./assets/Oops!...I Did It Again in the Style of -Britney Spears- karaoke video with lyrics (no lead vocal).mp3">Oops, I Did It Again - Natalia Fragomeni</a></li>
-                    <li><a href="./assets/Karaoke Fight Song - Rachel Platten -.mp3">Fight Song - Sophia Istvan</a></li>
-                    <li><a href="./assets/Julia Michaels- Issues (Clean).mp3">Issues - Lilah Baker</a></li>
-                    <li><a href="./assets/01 - Space Unicorn.mp3">Space Unicorn - Nora Istvan</a></li>
-                    <li><a href="./assets/Annie - It's A Hard Knock Life For Us.mp3">It's A Hard Knock Life - Delismarie Heras</a></li>
-                    <li><a href="./assets/Five Nights at Freddy's Medley.mp3">Below the Surface - Daniel and Jorge Heras</a></li>
+                    <li><a href="./assets/01_Scars To Your Beautiful Karaoke Lyrics.mp3">Mariella Trogani and the 3rd Grade Glee Club</a></li>
+                    <li><a href="./assets/02_Hula Hoop (Cut Intro and End).mp3">Hula Hoop - Irene Eldho</a></li>
+                    <li><a href="./assets/03_Three little birds karaoke.mp3">3 Little Birds - Alaina Berkowitz</a></li>
+                    <li><a href="./assets/04_Ding Dong.mp3">Ding Dong(Munchkinland) - Melzer, Schwartz, et al</a></li>
+                    <li><a href="./assets/05_Its Possible.mp3">It's Possible - Melzer, Schwartz, et al</a></li>
+                    <li><a href="./assets/06_Backstage-Denzel's Music Video (Cut Intro).mp3">Backstage: Music Video - Reya Sinha and Anika Bijala</a></li>
+                    <li><a href="./assets/07_Cheap Thrills (Karaoke Cut Intro).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
+                    <li><a href="./assets/08_That's What I Like Clean Version.mp3">That's What I Like - Tegan Heim and Abigail Lavenberg</a></li>
+                    <li><a href="./assets/09_Piece By Piece - Karaoke-cut for Giada.mp3">Piece By Piece, Giada Amoia</a></li>
+                    <li><a href="./assets/10_Part Of Your World (Karaoke Version).mp3">Part Of Your World - Alyssa Longobardi</a></li>
+                    <li><a href="./assets/11_Oops!...I Did It Again - karaoke.mp3">Oops, I Did It Again - Natalia Fragomeni</a></li>
+    
+                    <li><a href="./assets/12_Issues (Clean).mp3">Issues - Lilah Baker</a></li>
+                    <li><a href="./assets/13_Space Unicorn.mp3">Space Unicorn - Nora Istvan</a></li>
+                    <li><a href="./assets/14_It's A Hard Knock Life For Us.mp3">It's A Hard Knock Life - Delismarie Heras</a></li>
+                    <li><a href="./assets/15_Five Nights at Freddy's Medley.mp3">Below the Surface - Daniel and Jorge Heras</a></li>
                 </ul>
             </div>
         </div>
