--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <li><a href="./assets/07_Cheap Thrills (Karaoke Cut Intro).mp3">Cheap Thrills - Jennavecia Simeone</a></li>
                     <li><a href="./assets/08_That's What I Like Clean Version.mp3">That's What I Like - Tegan Heim and Abigail Lavenberg</a></li>
                     <li><a href="./assets/09_Piece By Piece - Karaoke-cut for Giada.mp3">Piece By Piece, Giada Amoia</a></li>
-                    <li><a href="./assets/10_Part Of Your World (Karaoke Version).mp3">Part Of Your World - Alyssa Longobardi</a></li>
+                    <li><a href="./assets/10_Part of Your World Karaoke.mp3">Part Of Your World - Alyssa Longobardi</a></li>
                     <li><a href="./assets/11_Oops!...I Did It Again - karaoke.mp3">Oops, I Did It Again - Natalia Fragomeni</a></li>
                     <li><a href="./assets/12_Issues (Clean).mp3">Issues - Lilah Baker</a></li>
                     <li><a href="./assets/13_Space Unicorn.mp3">Space Unicorn - Nora Istvan</a></li>
